--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,15 +15,18 @@
   </style>
 </head>
 <body>
+  <div class="container">
 
-  Get insights that help your business grow.
+    <div class="image-contaonier"><img src="images/image-header-mobile.jpg" alt="meeting"></div>
+    <h1>Get <span id="colored-word">insights</span> that help your business grow.</h1>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+    <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+    experience, and overall efficiency.</p>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+    <div class="stats-element"><span>10k+</span> companies</div>
+    <div class="stats-element"><span>314</span> templates</div>
+    <div class="stats-element"><span>12m+</span> queries</div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
