--- a/index.html
+++ b/index.html
@@ -24,20 +24,32 @@
 <body>
   <div class="container">
 
-    <div class="image-contaonier"><img src="images/image-header-mobile.jpg" alt="meeting"></div>
+    <div class="image-container">
+      <!-- header image -->
+    </div>
+
     <h1>Get <span id="colored-word">insights</span> that help your business grow.</h1>
 
     <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
     experience, and overall efficiency.</p>
 
-    <div class="stats-element"><span>10k+</span> companies</div>
-    <div class="stats-element"><span>314</span> templates</div>
-    <div class="stats-element"><span>12m+</span> queries</div>
+    <div class="stats-element">
+      <span>10k+</span> 
+      <p>companies</p>
+    </div>
+    <div class="stats-element">
+      <span>314</span> 
+      <p>templates</p></div>
+    <div class="stats-element">
+      <span>12m+</span> 
+      <p>queries</p>
+    </div>
+
   </div>
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
