--- a/index.html
+++ b/index.html
@@ -28,22 +28,27 @@
       <!-- header image -->
     </div>
 
-    <h1>Get <span id="colored-word">insights</span> that help your business grow.</h1>
+    <div class="content">
+      <h1>Get <span id="colored-word">insights</span> that help your business grow.</h1>
 
-    <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-    experience, and overall efficiency.</p>
+      <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      experience, and overall efficiency.</p>
 
-    <div class="stats-element">
-      <span>10k+</span> 
-      <p>companies</p>
-    </div>
-    <div class="stats-element">
-      <span>314</span> 
-      <p>templates</p></div>
-    <div class="stats-element">
-      <span>12m+</span> 
-      <p>queries</p>
-    </div>
+      <div class="stats-group">
+        <div class="stats-element">
+          <span>10k+</span> 
+          <p>companies</p>
+        </div>
+        <div class="stats-element">
+          <span>314</span> 
+          <p>templates</p>
+        </div>
+        <div class="stats-element">
+          <span>12m+</span> 
+          <p>queries</p>
+        </div>
+      </div>
+  </div>
 
   </div>
 
